web server and rest api development